added node modules

--- a/assets/static/styles/style.css
+++ b/assets/static/styles/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Verdana', sans-serif;
+    background: #fafafa;
+    font-family: 'Source Sans Pro', sans-serif;
     margin: 50px 25px;
 }
 
@@ -11,17 +12,14 @@ a:hover {
     color: #33bbdf;
 }
 
+h3 {
+    font-weight: 600;
+}
+
 header, footer, div.page {
     width: 760px;
     margin: 0 auto;
-    padding: 20px 30px;
-}
-
-header h1 {
-    color: #169bbd;
-    margin: 0;
-    font-weight: normal;
-    font-size: 42px;
+    padding: 10px 20px;
 }
 
 header nav ul {
@@ -34,7 +32,4 @@ header nav ul li {
     display: inline;
     margin: 0 8px 0 0;
     padding: 0;
-}
-
-div.page {
 }
