--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -15,6 +15,8 @@
     {% endif %}
     on {{ post.pub_date }}
   </p>
+  {% if not from_index %}
   {{ post.body }}
+  {% endif %}
   </div>
 {% endmacro %}
