--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ '/static/styles/typebase.css'|url }}">
 <link rel="stylesheet" href="{{ '/static/styles/style.css'|url }}">
 <link rel="icon" href="{{ '/static/images/favicon.png'|url }}">
-<title>{% block title %}Welcome{% endblock %} — Diomari Madulara</title>
+<title>{% block title %}Welcome{% endblock %} — Diomari Madulara &#9741; Software Developer</title>
 
 <!-- Get WebFont -->
 <script type="text/javascript">
@@ -21,9 +21,10 @@
   })();
 </script>
 
+
 <body>
   <header class="col-12">
-    <h3>Diomari Madulara - Web Developer</h3>
+    <h2>Diomari Madulara</h2>
     <nav>
       <ul class="nav navbar-nav">
         <li{% if this._path == '/' %} class="active"{% endif
