--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -1,10 +1,10 @@
 {% macro render_blog_post(post, from_index=false) %}
   <div class="blog-post">
   {% if from_index %}
-    <h2><a href="{{ post|url }}">{{ post.title }}</a></h2>
+    <h3><span class="blog-date">{{ post.pub_date }}</span>  <a href="{{ post|url }}">{{ post.title }}</a></h3>
+
   {% else %}
-    <h2>{{ post.title }}</h2>
-  {% endif %}
+    <h3>{{ post.title }}</h3>
   <p class="meta">
     written by
     {% if post.twitter_handle %}
@@ -15,8 +15,7 @@
     {% endif %}
     on {{ post.pub_date }}
   </p>
-  {% if not from_index %}
   {{ post.body }}
-  {% endif %}
   </div>
+  {% endif %}
 {% endmacro %}
